added some page views to test routes

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
 <div class="panel panel-primary">
     <div class="panel-heading">
         <h3 class="panel-title">
-            Hello!
+            Login with Github
         </h3>
     </div> 
 </div>
