added login button

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,6 +2,7 @@
     <div class="panel-heading">
         <h3 class="panel-title">
             Login with Github
+            <a href="https://github.com/login/oauth/authorize?scope=user:email&client_id={{client_id}} >">Log In</a>
         </h3>
     </div> 
 </div>
