--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,7 +1,7 @@
 <div class="panel panel-primary">
     <div class="panel-heading">
         <h3 class="panel-title">
-            Hello!
+            Hello! {{user.displayName}}
         </h3>
     </div> 
 </div>
