--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,7 +20,7 @@
               {{{ body }}}
 
         </div>
-        <div style="border-top: solid 1px #eee; padding-top: 1em;">
+        <div class="footer" style="border-top: solid 1px #eee; padding-top: 1em;">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 text-center">
