--- a/views/dash.hbs
+++ b/views/dash.hbs
@@ -1,8 +1,7 @@
 <div class="panel panel-primary">
     <div class="panel-heading">
         <h3 class="panel-title">
-            Login with Github
-            <a href="/auth/github">Log In</a>
+            This will be the logged in user dashboard
         </h3>
     </div> 
 </div>
