--- a/views/dash.hbs
+++ b/views/dash.hbs
@@ -2,6 +2,7 @@
     <div class="panel-heading">
         <h3 class="panel-title">
             This will be the logged in user dashboard
+            Hello! {{user.displayName}}
         </h3>
     </div> 
 </div>
