--- a/views/poll.hbs
+++ b/views/poll.hbs
@@ -1,7 +1,7 @@
 <div class="panel panel-primary">
     <div class="panel-heading">
         <h3 class="panel-title">
-            Filler text
+            This is where individual polls go
         </h3>
     </div> 
 </div>
