issue fixed, logs were being missread

--- a/views/dash.hbs
+++ b/views/dash.hbs
@@ -2,7 +2,7 @@
     <div class="panel-heading">
         <h3 class="panel-title">
             This will be the logged in user dashboard
-            Hello! {{profile.login}}
+            Hello! {{profile.username}}
         </h3>
     </div> 
 </div>
