various changes to files, incorporating user made polls. Cannot remember most changes since last active

--- a/views/dash.hbs
+++ b/views/dash.hbs
@@ -2,7 +2,7 @@
     <div class="panel-heading">
         <h3 class="panel-title">
             This will be the logged in user dashboard
-            Hello! {{profile.username}}
+            Hello {{user.username}}!
         </h3>
     </div> 
 </div>
