--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,7 +1,8 @@
 <div class="panel panel-primary">
     <div class="panel-heading">
         <h3 class="panel-title">
-            This is the home page!
+            This is the home page! Sign In to see poll stuff!
         </h3>
+        <a class="login btn btn-info" href="/auth/github">Log In with Github</a>
     </div> 
 </div>
