--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         <title>Voting App</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/public/css/styles.css">
@@ -12,15 +15,11 @@
         <div class="page-header">
             <div class="container">
                 <div class="col-md-6">
-                    <h1><a href="/">Voting App</a></h1>
-                    <a class="login btn btn-info" href="/auth/github">Log In with Github</a>
+                    <h1><a href="/">Voting App</a></h1> 
                 </div>
             </div>
         </div>
         <div class="container">
-            <div class="pieDiv">
-                 <canvas id="pieChart" width="100px" height="100px"></canvas>
-            </div>
            
               {{{ body }}}
 
