moved poll creation feature to signed in user Dash page

--- a/views/dash.hbs
+++ b/views/dash.hbs
@@ -4,5 +4,15 @@
             This will be the logged in user dashboard
             Hello {{user.username}}!
         </h3>
+        <div class="pieDiv">
+            <canvas id="pieChart" width="100px" height="100px"></canvas>
+        </div>
+        Let's make a new Poll!
+        <form action="/newpoll" method="POST">
+            <input type="text" placeholder="title" name="title">
+            <input type="text" placeholder="choice1" name="choice1">
+            <input type="text" placeholder="choice2" name="choice2">
+            <button type="submit" value="Submit">Submit</button>
+        </form>
     </div> 
 </div>
