displaypoll thru get request

--- a/views/poll.hbs
+++ b/views/poll.hbs
@@ -3,5 +3,9 @@
         <h3 class="panel-title">
             This is where individual polls are displayed, will change so that poll name will lead to poll's page
         </h3>
+
+        {{title}}
+        {{choice1}}
+        {{choice2}}
     </div> 
 </div>
