--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,8 +17,17 @@
                 <div class="col-md-6">
                     <h1><a href="/">Voting App</a></h1> 
                 </div>
+                 <form class="search" role="search">
+                    <div class="input-group add-on">
+                        <input class="searchInput" placeholder="Search polls..." name="search-polls" id="search-polls" type="text">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
+        
         <div class="container">
            
               {{{ body }}}
