--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,14 +17,16 @@
                 <div class="col-md-6">
                     <h1><a href="/">Voting App</a></h1> 
                 </div>
-                 <form class="search" role="search">
-                    <div class="input-group add-on">
-                        <input class="searchInput" placeholder="Search polls..." name="search-polls" id="search-polls" type="text">
-                        <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                <div class="col-md-6">
+                    <form class="search" role="search" method="get" action="https://intense-ocean-47786.herokuapp.com/api"> 
+                        <div class="input-group add-on">
+                            <input class="searchInput" placeholder="Search polls..." name="search-polls" id="search-polls" type="text" required>
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                            </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
         
