moving chart script to inline

--- a/views/poll.hbs
+++ b/views/poll.hbs
@@ -11,5 +11,26 @@
         <div class="pieDiv">
             <canvas id="pieChart" width="100px" height="100px"></canvas>
         </div>
+
+        <script>
+            const ctx = document.getElementById('pieChart');
+const pieChart = new Chart(ctx, {
+  type: 'pie',
+  data: {
+    labels: [choice1, choice2],
+    datasets: [{
+      label: '# of Votes',
+      data: [3, 5],
+      backgroundColor: [
+        'rgba(255, 99, 132, 1)',
+        'rgba(54, 162, 235, 1)',
+      ],
+    }],
+  },
+  options: {
+    responsible: false,
+  },
+});
+        </script>
     </div> 
 </div>
